# cuda-utils

./: .gitignore  CMakeLists.txt
include/: cuda-utils.cuh
src/: cuda-utils.cu
